# ppx_inline_test

runner/lib/: dune
src/: ppx_inline_test.ml
test/: dune
